[package]
name = "fours"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
clap_derive = "4.5.3"
crossterm = "0.27.0"
html-escape = "0.2.13"
minus = { version = "5.6.0", features = ["dynamic_output"] }
ratatui = "0.26.1"
reqwest = { version = "0.12.0", features = ["blocking"] }
scraper = "0.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
textwrap = "0.16.1"
